# tsumugai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  TEST_GENERATION_SUMMARY.md  TODO.md  debug_branch.rs  debug_choice.rs  package-lock.json  package.json  readme.ja.md  test_commands.md  test_debug.md  test_issue18.md  test_new_commands  test_new_commands.rs  test_player_demo.md  test_scenario.md
.github/: ai-review-instructions.md  pull_request_template.md
docs/: API.md  ARCHITECTURE.md  CLI_OUTPUT.md  CONCEPT.md  DEVELOPMENT_WORKFLOW.md  DIAGNOSTIC.md  REVIEW_GUIDE.md  ROUTES.md  TRACE.md  VERSIONING.md  ai-review.md
examples/: choice_example.rs  debug_branch.rs  debug_runtime.rs  dump.rs  hello.md  strange_encounter.md  strange_encounter.rs  test_new_commands.rs
schemas/: Output.schema.json  State.schema.json
src/: facade.rs  ir.rs  legacy_adapter.rs  lib.rs  main.rs  narrative_layer.rs  parse.rs  player.rs  resolve.rs  story_engine.rs
tests/: application_engine_tests.rs  application_integration_tests.rs  application_layer_tests.rs  branch_cache_tests.rs  check_test.rs  clean_architecture_contract_tests.rs  clean_architecture_tests.rs  cli_test.rs  compile_test.rs  cui_player_integration_test.rs  ddd_separation_tests.rs  debug_trace_integration_test.rs  dependency_injection_tests.rs  dfs_scenario_tests.rs  directive_mapping_tests.rs  error_chain_tests.rs  golden_snapshot_test.rs  golden_tests.rs  integration_scenario_tests.rs  integration_test.rs  integration_tests.rs  new_api_integration_test.rs  new_syntax_tests.rs  (+4 more)
(+130 files in other folders)
