[package]
name = "tsumugai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
md5 = "0.7"
log = "0.4"
anyhow = "1.0.100"

[[example]]
name = "choice_example"
path = "examples/choice_example.rs"
